<resources>
    <string name="app_name">My Food</string>
    <string name="title_activity_restaurant_list">Restaurant List</string>
    <string name="title_activity_user">User Setting</string>
    <string name="title_activity_setting">User Settings</string>
    <string name="title_activity_take_order">Take Order</string>
    <string name="title_activity_qr_scanner">QR Scan</string>
    <string name="title_activity_search">QR Scan</string>
    <string name="title_activity_finishorder">Finish Order</string>
    <string name="title_activity_location">Location Setting</string>
    <string name="title_activity_order_detail">Order Detail</string>
    <string name="title_activity_amount_operate">Amount Operate</string>
    <string name="title_activity_order_payment">Order Payment</string>
    <string name="title_activity_mc_payment">MC Payment</string>
    <string name="lbLoginIn">Login</string>
    <string name="lbLogout">Logout</string>
    <string name="lbUserName">User Name</string>
    <string name="lbAccount">Account</string>
    <string name="lbHelp">Help</string>
    <string name="lbRateApp">Rate the App</string>
    <string name="lbContactUs">Contact us</string>
    <string name="lbSignup">Sign Up</string>
    <string name="lbEmail">Email</string>
    <string name="lbPassword">Password</string>
    <string name="lbForgetPwd">forgot password ?</string>
    <string name="errorEmpty">Cannot be empty</string>
    <string name="errorBeyond">Beyond account balance</string>
    <string name="errorFormat">format is incorrect</string>
    <string name="lbPhoneNumber">Phone Number</string>
    <string name="lbConfirmPassword">Confirm Password</string>
    <string name="lbCustomerName">Customer Name</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_retionale_location_denied">Need location service to get nearby restaurants</string>
    <string name="permission_phone_call_denied">Need Phone Call Permission to get contact with restaurant</string>
    <string name="lbUpdate">Update</string>
    <string name="lbCurrentPwd">Current Password</string>
    <string name="lbNewPwd">New Password</string>
    <string name="lbConfirmPwd">Confirm Password</string>
    <string name="lbRepeatPwd">Repeat New Password</string>
    <string name="lbChangePwd">Change Password</string>
    <string name="errorUnsame">New passwords do not match each other</string>
    <string name="lbConfirm">Confirm</string>
    <string name="lbCategory">Category</string>
    <string name="lbDelivery">Delivery</string>
    <string name="lbTakeout">Take Out</string>
    <string name="lbDineIn">Dine In</string>
    <string name="lbNo">No Label</string>
    <string name="lbHome">Home</string>
    <string name="lbSchool">School</string>
    <string name="lbCompany">Company</string>
    <string name="lbRestaurants">Restaurants</string>
    <string name="lbOrders">Orders</string>
    <string name="lbUser">User</string>
    <string name="lbServerDisable">can not available data from server</string>
    <string name="errorQRCode">Incorrect QR Code</string>
    <string name="lbEmailFormatterError">The Email format is incorrect!</string>
    <string name="errorEmail">Not a correct Email format</string>
    <string name="lbDeliverying">delivering</string>
    <string name="lbOrdered">ordered</string>
    <string name="lbFinish">finish</string>
    <string name="errorPwd">Incorrect password</string>
    <string name="lbNow">now</string>
    <string name="lbPermissionAskAgain">permission ask again</string>
    <string name="lbGetPermission">get permission</string>
    <string name="lbGPSSettings">GPS settings</string>
    <string name="hintEnableGPS">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="lbCancelled">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="lbCancel">Cancel</string>
    <string name="lbShoppingCar">Shopping Cart</string>
    <string name="lbClear">Clear</string>
    <string name="lbItemName">Item Name</string>
    <string name="lbPrice">Price</string>
    <string name="lbTotal">Total</string>
    <string name="lbRefund">Refund</string>
    <string name="refundAmount">Refund Amount : %s</string>
    <string name="hintRefund">Please write your reason as detailed as possible</string>
    <string name="lbTotalAmountM">Total Amount:</string>
    <string name="lbOrderNumberM">Order Number:</string>
    <string name="lbInProcess">in-process</string>
    <string name="lbFinished">Finished</string>
    <string name="lbRefused">Refused</string>
    <string name="lbUnknow">Unknown</string>
    <string name="lbWithdraw">Withdraw</string>
    <string name="lbHandling">Handling</string>
    <string name="lbRefunding">Refunding</string>
    <string name="lbRefunded">Refunded</string>
    <string name="lbRefundRefused">Refund Refused</string>
    <string name="lbZipCode">Zip Code</string>
    <string name="lbAddressLine1">Address Line1</string>
    <string name="lbAddress">Address</string>
    <string name="lbAddLocation">Add Location</string>
    <string name="lbEditLocation">Edit Location</string>
    <string name="lbRest">Rest</string>
    <string name="lbReset">Reset</string>
    <string name="lbLocationList">Location List</string>
    <string name="lb_pick_up_time">Pick up Time</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="your_information">Your Information</string>
    <string name="delivery_now">Delivery Now</string>
    <string name="i_m_waiting_in_restaurant">I\'m waiting in restaurant</string>
    <string name="order_details">Order Details</string>
    <string name="other_requirements">Other Requirements</string>
    <string name="order_remark_hint">If you have some special needs, just tell us</string>
    <string name="ZipCodeM">Zip Code:</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_pwd_hint">Please input your Email address, and you will receive a reset Email. Follow the instructions and your password will be reset.</string>
    <string name="reset_succeed">We have sent you an Email telling how to finish the final step for resetting your password. In case of being intercept, you would better check your inbox as well as your spam.</string>
    <string name="not_business">not open for business</string>
    <string name="fail_access_location">Fail to access location info</string>
    <string name="lbEmpty">empty</string>
    <string name="restaurantEmpty">No result, pull to refresh</string>
    <string name="error_network">network error</string>
    <string name="prepareing_data">data is preparing… try it later</string>
    <string name="last_step">last step</string>
    <string name="check_email">go to your email box and finish the last step</string>
    <string name="under_start_price">do not reach the starting price</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="start_with_a_letter">should start with a letter</string>
    <string name="pwd_length_6_16">password should between 6 to 16 characters</string>
    <string name="digit_must_contain">a digit must occur at least once</string>
    <string name="no_whitespace">no whitespace allowed</string>
    <string name="restaurant_name">&#160;&#160;&#160; Restaurant name &#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="guest_number">Guest Number</string>
    <string name="table_number_M">Table Number:</string>
    <string name="order_number_M">Order Number:</string>
    <string name="email_function_hint">*these information function as the way in which we contact you once needed</string>
    <string name="edit_contact_information">Edit Contact Information</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="address_line_3">Address line 3</string>
    <string name="unpaid">unpaid</string>
    <string name="provider_settings_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="provider_settings_yes">Yes</string>
    <string name="search">search</string>
    <string name="empty">empty</string>
    <string name="no_more_data">no more data…</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="more">more…</string>
    <string name="qr_scan">QR Scan</string>
    <string name="amountM">Amount:</string>
    <string name="delivery">Delivery</string>
    <string name="dine_in">Dine In</string>
    <string name="online_refund">Online Refund</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="edit_location">Edit Location</string>
    <string name="create_time_M">Create Time:</string>
    <string name="take_out">Take out</string>
    <string name="account_information">Account information</string>
    <string name="food_type">Food Type</string>
    <string name="withdraw_amount">Withdrawal Amount</string>
    <string name="company">Company</string>
    <string name="balance_withdraw">Balance Withdraw</string>
    <string name="details">Details</string>
    <string name="product_search_hint">enter the name of product</string>
    <string name="choose_address">please choose an address</string>
    <string name="withdraw_details_hint">Credit card number and more details</string>
    <string name="refund_hint">The money will appear on your account deposit once the restaurant accept this refund application.</string>
    <string name="current_location">Current Location</string>
    <string name="refund_reason">Refund Reason</string>
    <string name="signup_email_hint">*find your password back when forgot it</string>
    <string name="access_location">access location.....</string>
    <string name="order_status">Order Status</string>
    <string name="edit_contact_info">Edit Contact Information</string>
    <string name="change_pwd">Change Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_taken">Order Taken</string>
    <string name="delete">Delete</string>
    <string name="delivering">Delivering</string>
    <string name="no_label">no label</string>
    <string name="home">home</string>
    <string name="school">school</string>
    <string name="companyM">company</string>
    <string name="finished">Finished</string>
    <string name="item_details">Item Details</string>
    <string name="table_number">Table Number</string>
    <string name="display_qr_code">Displayed by the QR scan</string>
    <string name="address_M">Address:</string>
    <string name="order_time_M">Order Time:</string>
    <string name="pick_up_time_M">Pick Up Time:</string>
    <string name="payment">Payment</string>
    <string name="no_data_available">no data available</string>
    <string name="beyond_delivery_arrange">beyond delivery arrange</string>
    <string name="input_delivery_location">Please input your delivery location</string>
    <string name="scan_qr_code">Please scan the QR Code of table</string>
    <string name="scan_qr_code_again">Please scan the QR Code of table again</string>
    <string name="please_login_first">please login first</string>
    <string name="delete_order">Delete Order</string>
    <string name="delete_order_hint">Are you sure delete this order?</string>
    <string name="cancel_order">Cancel Order</string>
</resources>