<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/toolbar.TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lbChangePwd"/>

                <View
                    android:layout_width="@dimen/toolbarIconMinWidth"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etCurrent"
            style="@style/materialEditText"
            android:hint="@string/lbCurrentPwd"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            app:met_floatingLabelText="@string/lbCurrentPwd" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etNew"
            style="@style/materialEditText"
            android:hint="@string/lbNewPwd"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            app:met_floatingLabelText="@string/lbNewPwd" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etConfirm"
            style="@style/materialEditText"
            android:hint="@string/lbConfirmPwd"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            app:met_floatingLabelText="@string/lbRepeatPwd" />
    </LinearLayout>


    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#1E88E5"
        android:text="@string/lbUpdate"
        app:rippleSpeed="12" />

</LinearLayout>